# geometry

./: CMakeLists.properties  CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/collisionDetection/: BaseContact.h  CollisionTester.h  GeometryContact.h  IntersectionHelper.h
src/geometry/: Geometry.h
test/: CMakeLists.txt  GeometryTests.cpp  tests.cpp
test/matchers/: mathMatchers.h
